Fix nullable array list